Bedingungen und Schleifen überarbeitet

--- a/Python Allgemein/2X_Bedingungen_und_Schleifen.ipynb
+++ b/Python Allgemein/2X_Bedingungen_und_Schleifen.ipynb
@@ -62,38 +62,7 @@
     "tags": []
    },
    "outputs": [],
-   "source": [
-    "zahl = int(input()) # durch den Befehl int() weiß Python, dass wir eine (ganze) Zahl eingegeben haben\n",
-    "\n",
-    "# mit `if` kann eine Bedingung abgefragt werden\n",
-    "# mehrere Bedingungen können mit `and` und `or` kombiniert werden\n",
-    "\n",
-    "if zahl < 0 or zahl > 10:\n",
-    "    # wenn die Bedingung erfüllt wird, wird ein Fehler ausgegeben:\n",
-    "    print(\"Fehler. Bitte gib eine Zahl zwischen 0 und 10 ein.\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4688a8d4-d079-41a7-934c-9f6eac29633e",
-   "metadata": {
-    "id": "fLBOy7e0ICdP"
-   },
-   "source": [
-    "<font color='sky blue'>*__Aufgabe a) Frage die BenutzerInnen nach ihren Postleitzahlen und beantworte ihnen dann ob sie in Berlin wohnen oder in einer anderen deutschen Stadt.__*</font>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "669550ca-896b-44cc-8603-4a9256da62b5",
-   "metadata": {
-    "id": "btXggJIETDdM"
-   },
-   "outputs": [],
-   "source": [
-    "# hier kommt dein Code hin!"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -117,40 +86,7 @@
     "id": "4YxwWkbJLDqP"
    },
    "outputs": [],
-   "source": [
-    "alter = int(input(\"Wie alt bist du? \"))\n",
-    "\n",
-    "if alter < 18:\n",
-    "    # wenn die Bedingung erfüllt wird, wird der Satz ausgegeben:\n",
-    "    print(\"Du bist noch nicht erwachsen.\")\n",
-    "\n",
-    "else:\n",
-    "    # wenn die Bedingung nicht erfüllt wurde, wird jedoch dieser Satz ausgegeben:\n",
-    "    print(\"Du bist schon erwachsen.\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7ed67f93-7091-406a-9107-eb73140087e5",
-   "metadata": {
-    "id": "fLBOy7e0ICdP",
-    "tags": []
-   },
-   "source": [
-    "<font color='sky blue'>*__Aufgabe b) Frage die BenutzerInnen nach einer Zahl und teile ihnen anschließend mit ob sie positiv oder negativ ist.__*</font>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c8613993-00e5-4ada-8bb2-6ec36ce43a35",
-   "metadata": {
-    "id": "2BdFpAG6T62k"
-   },
-   "outputs": [],
-   "source": [
-    "# hier kommt dein Code hin!"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -198,10 +134,7 @@
     "tags": []
    },
    "outputs": [],
-   "source": [
-    "for x in range(5):\n",
-    "  print(x)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -224,32 +157,7 @@
     "tags": []
    },
    "outputs": [],
-   "source": [
-    "for zahl in range(1, 4):\n",
-    "  print(zahl)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "035bb9ae-405e-4e1e-9baf-c55b92ef98d1",
-   "metadata": {
-    "id": "fLBOy7e0ICdP"
-   },
-   "source": [
-    "<font color='sky blue'>*__Aufgabe a) Gebe die Zahlen von 2 bis 6 mit einer Schleife aus.__*</font>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5177e54e-42e9-4eb4-9d52-14e346da1c00",
-   "metadata": {
-    "id": "QPVTsyaYIM9y"
-   },
-   "outputs": [],
-   "source": [
-    "# hier kommt dein Code hin!"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -263,119 +171,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
    "id": "c3201a77-fada-4d69-94eb-70a3a13631cc",
-   "metadata": {
-    "id": "-jmwlZByIigk"
-   },
-   "outputs": [],
-   "source": [
-    "for i in range(3):\n",
-    "  print(\"Hallo\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b6aaeb80-5d54-4ba4-8f80-7bde63676ec5",
-   "metadata": {
-    "id": "-UpHqCHZPhPW"
-   },
-   "source": [
-    "Vielleicht hast du bemerkt, dass wir in den Beispielen nach dem `for` einmal `x`, einmal `zahl` und einmal `i` geschrieben haben. Du kannst jeden Namen wählen, den du möchtest. Diese Namen stehen für einen Wert, der in jeder Runde der Schleife unterschiedlich sein kann. Diesen Wert nennt man *Schleifenvariable*.\n",
-    "\n",
-    "Stell dir vor, du hast eine Schleife, die 5 Mal durchläuft. Du könntest die Schleifenvariable `zahl` nennen und sie würde in jedem Durchlauf einen anderen Wert annehmen, in der ersten Runde wäre `zahl = 0`, in der zweiten Runde `zahl = 1`, in der dritten `zahl = 2`, dann `3` und `4`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8793c728-8d57-47a4-b40e-d3ff97621f6f",
-   "metadata": {
-    "id": "fLBOy7e0ICdP"
-   },
-   "source": [
-    "<font color='sky blue'>*__Aufgabe b) Berechne das Quadrat ($x^2$) aller Zahlen von 1 bis 10 und gib jeweils das Ergebnis aus.__*</font>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "380dfbba-f61d-4f7e-a272-f6be4465eb89",
-   "metadata": {
-    "id": "QPVTsyaYIM9y"
-   },
-   "outputs": [],
-   "source": [
-    "# hier kommt dein Code hin!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a3305b7d-189c-417d-9f18-6c7befa01ef1",
-   "metadata": {
-    "id": "fLBOy7e0ICdP"
-   },
-   "source": [
-    "<font color='sky blue'>*__Aufgabe c) Der folgende Code berechnet die Summe der Zahlen 1 bis 10. Vereinfache ihn mithilfe einer for-Schleife.__*</font>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f048f3a1-eba9-4cd0-bf26-1c896ed2659e",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "summe = 0\n",
-    "summe = summe + 1\n",
-    "summe = summe + 2\n",
-    "summe = summe + 3\n",
-    "summe = summe + 4\n",
-    "summe = summe + 5\n",
-    "summe = summe + 6\n",
-    "summe = summe + 7\n",
-    "summe = summe + 8\n",
-    "summe = summe + 9\n",
-    "summe = summe + 10\n",
-    "\n",
-    "print(\"Summe: \" + str(summe))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "250d1ff0-ebff-4061-ac6c-237f0bcf4cbf",
-   "metadata": {
-    "id": "QPVTsyaYIM9y"
-   },
-   "outputs": [],
-   "source": [
-    "# hier kommt dein Code hin!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a56065cd-c518-4d55-8732-135984e2d01a",
-   "metadata": {
-    "id": "fLBOy7e0ICdP"
-   },
-   "source": [
-    "<font color='sky blue'>*__Aufgabe d) Ergänze nun ein input(), sodass die Summe der ersten n Zahlen berechnet wird.__*</font><br>\n",
-    "<font color='sky blue'>*__Bonus: Gib eine Fehlermeldung aus, wenn die Zahl negativ ist.__*</font>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1899aa40-2400-4eff-a35a-75b84fc2683c",
-   "metadata": {
-    "id": "QPVTsyaYIM9y"
-   },
-   "outputs": [],
-   "source": [
-    "# hier kommt dein Code hin!"
-   ]
+   "execution_count": 0
   }
  ],
  "metadata": {
