--- a/Python Allgemein/2_Bedingungen_und_Schleifen.ipynb
+++ b/Python Allgemein/2_Bedingungen_und_Schleifen.ipynb
@@ -15,16 +15,11 @@
    "id": "99761430-5668-4262-a05b-327cf53ac824",
    "metadata": {},
    "source": [
-    "## **Kontrollstrukturen**\n",
+    "# **Kontrollstrukturen**\n",
     "\n",
     "In den Codebeispielen, die wir bisher gesehen haben, wurden alle Zeilen des Codes nacheinander ausgeführt.\n",
     "Es kann aber vorkommen, dass wir einzelne Codeblöcke nur unter bestimmten Umständen oder sogar mehr als einmal ausführen möchten.\n",
-    "\n",
-    "Genau das können wir mit Kontrollstrukturen, wie Bedingungen und Schleifen, kontrollieren.\n",
-    "\n",
-    "Auf diese Weise können wir einzelne Codeblöcke nur unter bestimmten Umständen oder mithilfe von Schleifen sogar mehrfach ausführen lassen.\n",
-    "\n",
-    "Kontrollstrukturen in Programmiersprachen ermöglichen die Steuerung des Programmflusses, indem sie Entscheidungen treffen und Wiederholungen ermöglichen. Es handelt sich um grundlegende Bausteine, die es Entwicklern ermöglichen, die Ausführung von Code zu beeinflussen, abhängig von bestimmten Bedingungen oder Anforderungen."
+    "Genau das können wir mit Kontrollstrukturen wie Bedingungen und Schleifen beeinflussen."
    ]
   },
   {
