--- a/Python Allgemein/1X_Einführung.ipynb
+++ b/Python Allgemein/1X_Einführung.ipynb
@@ -38,21 +38,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9994f56c-32eb-4537-8769-bec12193d73c",
-   "metadata": {
-    "id": "23V3Z8tzcSw3",
-    "tags": []
-   },
-   "source": [
-    "<font color='sky blue'>*__Aufgabe: Füge einen neuen Codeblock und einen neuen Textblock hinzu.__  <br><br>\n",
-    "Mit dem* `+` *oben links in der Zeile kannst du einen neuen Block hinzufügen.<br>\n",
-    "Diesen kannst du verschieben, etwas hineinschreiben oder ihn zum Beispiel auch wieder löschen. Wenn du oben rechts statt \"Code\" das Wort \"Markdown\" auswählst ist es ein Textblock und kein Code Block mehr. <br> <br>\n",
-    "Mit dem Playbutton* `▶` *lässt du dir danach den Code ausführen oder den neuen Text anzeigen.<br> <br>\n",
-    "Tipp: Du kannst dir immer Codeblöcke hinzufügen, wenn du mal etwas ausprobieren möchtest.*</font>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "3f6e2684-5d83-4223-a7ee-260e5913a170",
    "metadata": {
     "id": "azPSgildcYSQ",
@@ -78,32 +63,7 @@
     "tags": []
    },
    "outputs": [],
-   "source": [
-    "print(\"Hallo, Welt!\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2e82c991-67ef-49b2-b397-164c816dce9e",
-   "metadata": {
-    "id": "j1VIyAjHarij"
-   },
-   "source": [
-    "<font color='sky blue'>*__Aufgabe a) Gib deinen Namen mit print() aus.__<br>Tipp: Dein Name muss in \"Anführungszeichen\" stehen.*</font>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "56b73ab2-1fd0-4604-a873-e9cfbec729c4",
-   "metadata": {
-    "id": "82d43ac4-9457-4bdc-a08c-49f35b2a0003",
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# hier kommt dein Code hin!"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -128,22 +88,7 @@
     "tags": []
    },
    "outputs": [],
-   "source": [
-    "# Das ist ein Kommentar."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4c4cd5a0-4b40-4613-b59c-49e1dfe6f6f4",
-   "metadata": {
-    "id": "2XfaGxkvbv5p",
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "print(\"Diese Zeile wird ausgeführt.\")  # aber nur bist zum \"#\""
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -169,11 +114,7 @@
     "tags": []
    },
    "outputs": [],
-   "source": [
-    "name = \"Kira Müller\"\n",
-    "\n",
-    "print(name)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -187,55 +128,7 @@
     "\n",
     "- **Variablennamen** haben keine Leerzeichen <br> z.B. `alter`, `mein_name`, `winkel2`\n",
     "- **Texte und Worte**, wie `Kira Müller` im Beispiel oben, nennt man *Strings* und werden in Anführungszeichen geschrieben.\n",
-    "- **Zahlen** kannst du auch als Variablen abspeichern. Kommazahlen werden mit einem Punkt getrennt. <br> z.B. `42`, `6.3`, `-10`\n",
-    "\n",
-    "<font color='sky blue'>*__Aufgabe b) Probier dich einmal im Erstellen von Variablen aus!__ Erstelle mindestens eine Zahl und einen String.*</font>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c997d1d8-e7c8-464c-a0f0-cc81e409f1ff",
-   "metadata": {
-    "id": "d8w5kIZAEIY4",
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# hier kommt dein Code rein, definiere zum Beispiel dein Alter und deinen Namen"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c0a6a1c8-3a71-4e14-9ae3-61e62aa4f7de",
-   "metadata": {
-    "id": "7WIkI3rSE1ZA"
-   },
-   "source": [
-    "Variablen können auch mit anderen Variablen befüllt werden."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1769028c-73cc-4cc3-8e00-62ff31e46684",
-   "metadata": {
-    "id": "qyWwcV6ME7Kg"
-   },
-   "outputs": [],
-   "source": [
-    "# definiere eine zweite Variable, die ein Vielfaches der ersten Variable ist"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "504d3ef4-999c-4d5a-8254-8ac760108f23",
-   "metadata": {
-    "id": "RUqGF2ozFFdk"
-   },
-   "source": [
-    "**Variablennamen**\n",
-    "Variablennamen können aus Buchstaben- und Zahlenkombinationen bestehen, zu beachten ist nur, dass der Name nicht mit einer Zahl anfangen darf. Groß- und Kleinschreibung wird berücksichtigt, die Variablen Haus und haus wären also zwei verschiedene."
+    "- **Zahlen** kannst du auch als Variablen abspeichern. Kommazahlen werden mit einem Punkt getrennt. <br> z.B. `42`, `6.3`, `-10`"
    ]
   },
   {
@@ -260,33 +153,7 @@
     "tags": []
    },
    "outputs": [],
-   "source": [
-    "name = input(\"Wie heißt du?\")\n",
-    "print(\"Hallo\", name, \"!\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6b1f5146-aa74-41a6-be77-9b9dc1ad0bd1",
-   "metadata": {
-    "id": "qJEN_xu1HAj-"
-   },
-   "source": [
-    "<font color='sky blue'>__Aufgabe c) Nun bist du dran: Stelle eine Frage mit `input()`!__<br>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d8719777-0760-4905-b60e-faf2289ac99b",
-   "metadata": {
-    "id": "fEuWoamEHxY-",
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# hier kommt dein Code hin!"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -325,34 +192,7 @@
     "tags": []
    },
    "outputs": [],
-   "source": [
-    "length = 2\n",
-    "volume = length * length * length\n",
-    "print(\"Volumen des Würfels: \", volume)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c5e24935-b7f1-43e9-a8ea-59663845adbe",
-   "metadata": {
-    "id": "qJEN_xu1HAj-"
-   },
-   "source": [
-    "<font color='sky blue'>__Aufgabe d) Schreibe ein Programm, welches die Fläche eines Rechtecks berechnet und diese ausgibt. Die Seiten sollen die Längen a = 7,5 und b = 2*a haben.__<br>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9c968ff7-92cd-4fe0-8145-c75d0975bbdb",
-   "metadata": {
-    "id": "TbuaEN3sO5vj",
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# hier kommt dein Code hin!"
-   ]
+   "source": []
   }
  ],
  "metadata": {
