--- a/Python Allgemein/3X_Funktionen.ipynb
+++ b/Python Allgemein/3X_Funktionen.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "40c7356c-d54e-41da-a8b2-2f7c376f4b74",
+   "id": "8380b707-4c2a-419b-805d-76502a66a8fc",
    "metadata": {
     "id": "9SrpRtgJb1p4"
    },
@@ -12,366 +12,80 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99761430-5668-4262-a05b-327cf53ac824",
-   "metadata": {},
+   "id": "bdd12f74-8c53-4596-b5a7-9ef5d34b6b9c",
+   "metadata": {
+    "id": "2_KyScn3aCHG"
+   },
    "source": [
-    "# **Kontrollstrukturen**\n",
+    "# **Selbst Befehle definieren mit Funktionen**\n",
     "\n",
-    "In den Codebeispielen, die wir bisher gesehen haben, wurden alle Zeilen des Codes nacheinander ausgeführt.\n",
-    "Es kann aber vorkommen, dass wir einzelne Codeblöcke nur unter bestimmten Umständen oder sogar mehr als einmal ausführen möchten.\n",
-    "Genau das können wir mit Kontrollstrukturen wie Bedingungen und Schleifen beeinflussen."
+    "Vielleicht hast du dich schon gefragt, woher die Befehle wie `input()`, `print()` oder `max()` eigentlich kommen. Die Antwort ist ganz einfach: Jemand hat sie für uns geschrieben!\n",
+    "<br>\n",
+    "Wir können auch eigene Befehle erfinden, indem wir Funktionen definieren.\n",
+    "Das bietet sich an, um oft benutzte Codeblöcke wiederzuverwenden.\n",
+    "In Python kannst du eine Funktion mit dem Wort `def` definieren. Führe einmal den nächsten Codeabschnitt aus.\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "9d0dc903-d2ad-4410-982f-cc471c28762b",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "937aa383-ae68-4de7-9905-2fc5c2e8f3b0",
    "metadata": {
-    "id": "7Ehb03Y9JmKK",
-    "jp-MarkdownHeadingCollapsed": true,
-    "tags": []
+    "id": "KQ6QmnUB4Zkd"
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "885fa309-85fc-4ab1-8531-b3aefcf24232",
+   "metadata": {
+    "id": "vvx0UFow8Oti"
    },
    "source": [
-    "## **Bedingungen stellen mit Verzweigungen 🌱**\n",
+    "# **Noch flexibler: Funktionen mit Parametern**\n",
     "\n",
-    "Mithilfe von Bedingungen kann spezifiziert werden, unter welchen Umständen ein bestimmter Teil vom Code ausgeführt werden soll.\n",
-    "Das kann zum Beispiel sinnvoll sein, um bei verschiedenen Benutzereingaben unterschiedliche Antworttexte auszugeben.\n",
-    "Das nennt man auch Verzweigungen!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6f74fd53-ee9d-42c6-85c8-28cb66bd8a96",
-   "metadata": {
-    "id": "GTXyeJM8QgoJ"
-   },
-   "source": [
-    "if-Bedingungen\n",
-    "---\n",
-    "Diese Bedingungen werden verwendet, wenn die Befehle nur unter bestimmten Bedingungen ausgeführt werden soll. Wichtig zu beachten ist die Formatierung hierbei. Die Befehle, die nur bei Erfüllung der Bedingungen ausgeführt werden sollen, müssen eingerückt stehen nach der if-Bedingung. Die Bedingung muss mit einem Doppelpunkt abgeschlossen werden.\n"
+    "Parameter ermöglichen es, Werte an Funktionen als Eingabe zu übergeben.\n",
+    "Dadurch können Funktionen abhängig von ihren Parameter verschiedene Dinge machen, wodurch sie deutlich flexibler eingesetzt werden können.\n",
+    "Ein Parameter ist wie eine Variable, die es nur innerhalb der Funktion gibt.\n",
+    "<br><br>\n",
+    "Das klingt erstmal kompliziert, aber schau dir einmal folgendes Beispiel an:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80a41ab6-8451-4e1c-8403-c197de3cd6a1",
+   "id": "612b0454-f003-44c0-a617-fe15d8266573",
    "metadata": {
-    "tags": []
+    "id": "7yUz_3gLAJr9"
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84b7ba2d-ef13-458f-9459-99d6e2fc6b7c",
+   "metadata": {
+    "id": "vvx0UFow8Oti"
+   },
    "source": [
-    "zahl = int(input()) # durch den Befehl int() weiß Python, dass wir eine (ganze) Zahl eingegeben haben\n",
+    "# **Funktionen mit Rückgabewerten**\n",
     "\n",
-    "# mit `if` kann eine Bedingung abgefragt werden\n",
-    "# mehrere Bedingungen können mit `and` und `or` kombiniert werden\n",
+    "Funktionen können Ergebnisse, die beispielsweise anhand von Parametern berechnet wurden, zurückgeben.\n",
+    "Auf diese Weise kann außerhalb der Funktion mit dem Ergebnis weitergearbeitet werden.\n",
     "\n",
-    "if zahl < 0 or zahl > 10:\n",
-    "    # wenn die Bedingung erfüllt wird, wird ein Fehler ausgegeben:\n",
-    "    print(\"Fehler. Bitte gib eine Zahl zwischen 0 und 10 ein.\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4688a8d4-d079-41a7-934c-9f6eac29633e",
-   "metadata": {
-    "id": "fLBOy7e0ICdP"
-   },
-   "source": [
-    "<font color='sky blue'>*__Aufgabe a) Frage die BenutzerInnen nach ihren Postleitzahlen und beantworte ihnen dann ob sie in Berlin wohnen oder in einer anderen deutschen Stadt.__*</font>"
+    "Das Ergebnis wird dazu innerhalb der Funktion nach dem Wort `return` angegeben:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "669550ca-896b-44cc-8603-4a9256da62b5",
+   "id": "e3fb6607-c9a1-47ff-84c7-2019df6b8256",
    "metadata": {
-    "id": "btXggJIETDdM"
+    "id": "7yUz_3gLAJr9"
    },
    "outputs": [],
-   "source": [
-    "# hier kommt dein Code hin!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c5c37665-58a7-4c04-9f72-e5343b3d8b26",
-   "metadata": {
-    "id": "QW-b8c3lTTIQ",
-    "tags": []
-   },
-   "source": [
-    "if-else-Bedingungen\n",
-    "---\n",
-    "Wenn bei einer Nicht-Erfüllung der Bedingung eine andere Abfolge von Befehlen ausgeführt werden soll, sind die if-else-Bedingungen praktisch.\n",
-    "In diesem Fall wird immer genau einer der beiden Codeblöcke ausgeführt."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f91b0c0c-12a4-4b70-8884-21edcca6b90b",
-   "metadata": {
-    "id": "4YxwWkbJLDqP"
-   },
-   "outputs": [],
-   "source": [
-    "alter = int(input(\"Wie alt bist du? \"))\n",
-    "\n",
-    "if alter < 18:\n",
-    "    # wenn die Bedingung erfüllt wird, wird der Satz ausgegeben:\n",
-    "    print(\"Du bist noch nicht erwachsen.\")\n",
-    "\n",
-    "else:\n",
-    "    # wenn die Bedingung nicht erfüllt wurde, wird jedoch dieser Satz ausgegeben:\n",
-    "    print(\"Du bist schon erwachsen.\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7ed67f93-7091-406a-9107-eb73140087e5",
-   "metadata": {
-    "id": "fLBOy7e0ICdP",
-    "tags": []
-   },
-   "source": [
-    "<font color='sky blue'>*__Aufgabe b) Frage die BenutzerInnen nach einer Zahl und teile ihnen anschließend mit ob sie positiv oder negativ ist.__*</font>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c8613993-00e5-4ada-8bb2-6ec36ce43a35",
-   "metadata": {
-    "id": "2BdFpAG6T62k"
-   },
-   "outputs": [],
-   "source": [
-    "# hier kommt dein Code hin!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "73c4d25f-107e-4b86-a3d1-9a7dce3e0b97",
-   "metadata": {
-    "id": "Ihs3SN96ZxLj"
-   },
-   "source": [
-    "# **Dinge wiederholen mit Schleifen 🎀**\n",
-    "\n",
-    "Stell dir vor, du möchtest denselben Text mehrmals ausgeben. Es wäre sehr anstrengend, wenn du den Code ganz oft hintereinander aufschreiben müsstest. Aber zum Glück gibt es eine Lösung: Schleifen! Mit Schleifen können wir Python sagen, dass wir eine Anweisung mehrmals ausführen möchten. <br><br>Schau dir einmal an was folgendes Programm macht.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2a9c4fba-9cda-4f95-be3f-5d23345f08ec",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "print(0)\n",
-    "print(1)\n",
-    "print(2)\n",
-    "print(3)\n",
-    "print(4)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4dd2da08-fe17-4fe9-9a35-c34b52e128c9",
-   "metadata": {},
-   "source": [
-    "Das Gleiche kann auch deutlich kürzer mithilfe einer for-Schleife ausgedrückt werden:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "062bdb9a-9c5a-448f-858e-402d3824addd",
-   "metadata": {
-    "id": "UQYgYiyL4X5m",
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "for x in range(5):\n",
-    "  print(x)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e4dc2eea-16d7-454b-a957-def0432cc276",
-   "metadata": {
-    "id": "U1hApLTYHMZ1"
-   },
-   "source": [
-    "Die `range()`-Funktion erstellt dabei die Zahlen von 0 bis eins vor der Zahl, die du in die Klammern schreibst.\n",
-    "\n",
-    "Für die Zahlen von 1 bis 3 müsstest das schreiben:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "54bfc866-5fbb-4bcc-8f9b-9a083903cece",
-   "metadata": {
-    "id": "wA8r5MU3HL4l",
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "for zahl in range(1, 4):\n",
-    "  print(zahl)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "035bb9ae-405e-4e1e-9baf-c55b92ef98d1",
-   "metadata": {
-    "id": "fLBOy7e0ICdP"
-   },
-   "source": [
-    "<font color='sky blue'>*__Aufgabe a) Gebe die Zahlen von 2 bis 6 mit einer Schleife aus.__*</font>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5177e54e-42e9-4eb4-9d52-14e346da1c00",
-   "metadata": {
-    "id": "QPVTsyaYIM9y"
-   },
-   "outputs": [],
-   "source": [
-    "# hier kommt dein Code hin!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1550b69f-efa3-4645-b135-9fbc9e33db10",
-   "metadata": {
-    "id": "JOxcni9KINKk"
-   },
-   "source": [
-    "Du kannst Schleifen aber auch verwenden, um andere Befehle mehrmals ausführen."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c3201a77-fada-4d69-94eb-70a3a13631cc",
-   "metadata": {
-    "id": "-jmwlZByIigk"
-   },
-   "outputs": [],
-   "source": [
-    "for i in range(3):\n",
-    "  print(\"Hallo\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b6aaeb80-5d54-4ba4-8f80-7bde63676ec5",
-   "metadata": {
-    "id": "-UpHqCHZPhPW"
-   },
-   "source": [
-    "Vielleicht hast du bemerkt, dass wir in den Beispielen nach dem `for` einmal `x`, einmal `zahl` und einmal `i` geschrieben haben. Du kannst jeden Namen wählen, den du möchtest. Diese Namen stehen für einen Wert, der in jeder Runde der Schleife unterschiedlich sein kann. Diesen Wert nennt man *Schleifenvariable*.\n",
-    "\n",
-    "Stell dir vor, du hast eine Schleife, die 5 Mal durchläuft. Du könntest die Schleifenvariable `zahl` nennen und sie würde in jedem Durchlauf einen anderen Wert annehmen, in der ersten Runde wäre `zahl = 0`, in der zweiten Runde `zahl = 1`, in der dritten `zahl = 2`, dann `3` und `4`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8793c728-8d57-47a4-b40e-d3ff97621f6f",
-   "metadata": {
-    "id": "fLBOy7e0ICdP"
-   },
-   "source": [
-    "<font color='sky blue'>*__Aufgabe b) Berechne das Quadrat ($x^2$) aller Zahlen von 1 bis 10 und gib jeweils das Ergebnis aus.__*</font>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "380dfbba-f61d-4f7e-a272-f6be4465eb89",
-   "metadata": {
-    "id": "QPVTsyaYIM9y"
-   },
-   "outputs": [],
-   "source": [
-    "# hier kommt dein Code hin!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a3305b7d-189c-417d-9f18-6c7befa01ef1",
-   "metadata": {
-    "id": "fLBOy7e0ICdP"
-   },
-   "source": [
-    "<font color='sky blue'>*__Aufgabe c) Der folgende Code berechnet die Summe der Zahlen 1 bis 10. Vereinfache ihn mithilfe einer for-Schleife.__*</font>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f048f3a1-eba9-4cd0-bf26-1c896ed2659e",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "summe = 0\n",
-    "summe = summe + 1\n",
-    "summe = summe + 2\n",
-    "summe = summe + 3\n",
-    "summe = summe + 4\n",
-    "summe = summe + 5\n",
-    "summe = summe + 6\n",
-    "summe = summe + 7\n",
-    "summe = summe + 8\n",
-    "summe = summe + 9\n",
-    "summe = summe + 10\n",
-    "\n",
-    "print(\"Summe: \" + str(summe))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "250d1ff0-ebff-4061-ac6c-237f0bcf4cbf",
-   "metadata": {
-    "id": "QPVTsyaYIM9y"
-   },
-   "outputs": [],
-   "source": [
-    "# hier kommt dein Code hin!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a56065cd-c518-4d55-8732-135984e2d01a",
-   "metadata": {
-    "id": "fLBOy7e0ICdP"
-   },
-   "source": [
-    "<font color='sky blue'>*__Aufgabe d) Ergänze nun ein input(), sodass die Summe der ersten n Zahlen berechnet wird.__*</font><br>\n",
-    "<font color='sky blue'>*__Bonus: Gib eine Fehlermeldung aus, wenn die Zahl negativ ist.__*</font>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1899aa40-2400-4eff-a35a-75b84fc2683c",
-   "metadata": {
-    "id": "QPVTsyaYIM9y"
-   },
-   "outputs": [],
-   "source": [
-    "# hier kommt dein Code hin!"
-   ]
+   "source": []
   }
  ],
  "metadata": {
