Funktionen überarbeitet + Design

--- a/Python Allgemein/1_Einführung.ipynb
+++ b/Python Allgemein/1_Einführung.ipynb
@@ -18,7 +18,7 @@
     "tags": []
    },
    "source": [
-    "# **Python für Anfängerinnen** 💻\n",
+    "# **Python für Anfängerinnen**\n",
     "\n",
     "Wilkommen im Kurs! <br>\n",
     "Heute werden wir uns gemeinsam die Programmiersprache Python angucken. Wir werden Variablen und Befehle kennenlernen und uns anschauen, wie man sie verwendet. Später werden wir außerdem mit der Python Turtle (Englisch für Schildkröte 🐢) geometrische Formen und Muster zeichnen."
@@ -69,7 +69,7 @@
     "tags": []
    },
    "source": [
-    "# **print() 🖨**\n",
+    "# **Textausgabe mit print() 🖨**\n",
     "\n",
     "Und jetzt programmieren wir! <br>Mit dem Befehl `print()` kannst du das ausgeben, was du in die Klammern schreibst. <br> Vergiss nicht, den Playbutton `▶` oben in der Leiste zu klicken."
    ]
