--- a/Python Allgemein/2X_Bedingungen_und_Schleifen.ipynb
+++ b/Python Allgemein/2X_Bedingungen_und_Schleifen.ipynb
@@ -30,7 +30,7 @@
     "tags": []
    },
    "source": [
-    "## **Bedingungen stellen mit Verzweigungen 🌱**\n",
+    "## **Bedingungen stellen mit Verzweigungen**\n",
     "\n",
     "Mithilfe von Bedingungen kann spezifiziert werden, unter welchen Umständen ein bestimmter Teil vom Code ausgeführt werden soll.\n",
     "Das kann zum Beispiel sinnvoll sein, um bei verschiedenen Benutzereingaben unterschiedliche Antworttexte auszugeben.\n",
@@ -169,10 +169,7 @@
    "execution_count": null,
    "id": "c3201a77-fada-4d69-94eb-70a3a13631cc",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": []
