--- a/Python Allgemein/2_Bedingungen_und_Schleifen.ipynb
+++ b/Python Allgemein/2_Bedingungen_und_Schleifen.ipynb
@@ -31,7 +31,7 @@
     "tags": []
    },
    "source": [
-    "## **Bedingungen stellen mit Verzweigungen 🌱**\n",
+    "## **Bedingungen stellen mit Verzweigungen**\n",
     "\n",
     "Mithilfe von Bedingungen kann spezifiziert werden, unter welchen Umständen ein bestimmter Teil vom Code ausgeführt werden soll.\n",
     "Das kann zum Beispiel sinnvoll sein, um bei verschiedenen Benutzereingaben unterschiedliche Antworttexte auszugeben.\n",
