--- a/Python Allgemein/3X_Funktionen.ipynb
+++ b/Python Allgemein/3X_Funktionen.ipynb
@@ -17,7 +17,7 @@
     "id": "2_KyScn3aCHG"
    },
    "source": [
-    "# **Selbst Befehle definieren mit Funktionen**\n",
+    "# **Eigene Befehle definieren mit Funktionen**\n",
     "\n",
     "Vielleicht hast du dich schon gefragt, woher die Befehle wie `input()`, `print()` oder `max()` eigentlich kommen. Die Antwort ist ganz einfach: Jemand hat sie für uns geschrieben!\n",
     "<br>\n",
@@ -43,7 +43,7 @@
     "id": "vvx0UFow8Oti"
    },
    "source": [
-    "# **Noch flexibler: Funktionen mit Parametern**\n",
+    "# **Funktionen mit Parametern**\n",
     "\n",
     "Parameter ermöglichen es, Werte an Funktionen als Eingabe zu übergeben.\n",
     "Dadurch können Funktionen abhängig von ihren Parameter verschiedene Dinge machen, wodurch sie deutlich flexibler eingesetzt werden können.\n",
