--- a/Python Allgemein/1X_Einführung.ipynb
+++ b/Python Allgemein/1X_Einführung.ipynb
@@ -150,8 +150,7 @@
    "source": [
     "# **input()💬**\n",
     "\n",
-    "Hast du schon einmal mit einem Computer gesprochen? Nun geht es darum, wie du mit Python sprechen kannst! Mit der `input()`-Funktion kannst du nämlich Informationen von Benutzerinnen und Benutzern abfragen und in deinem Programm verwenden. In den Klammern kann eine Beschreibung oder Aufforderung angegeben werden. <br>\n",
-    "Beachte: alle Eingaben bei der input-Funktion werden zunächst als string gespeichert."
+    "Mit der `input()`-Funktion kannst du von Benutzerinnen und Benutzern Werte eingeben lassen. Diese Eingaben kannst du dann in deinem Programm verwenden. In die Klammern kannst du schreiben, was eingegeben werden soll."
    ]
   },
   {
@@ -180,17 +179,12 @@
     "*   Multiplikation *\n",
     "*   Division /\n",
     "*   Potenz **\n",
-    "*   Division mit Rest //\n",
-    "*   Rest einer Division % (modulo)\n",
-    "*   Betrag abs()\n",
-    "*   Maximum und Minimum max() und min()\n",
     "*   Vergleich ==\n",
     "*   Ungleichheit !=\n",
     "*   größer gleich >=\n",
     "*   größer >\n",
     "\n",
-    "\n",
-    "Auch bei Python wird die Regel Punkt vor Strich berücksichtigt und alle Klammern primär berechnet.\n"
+    "Auch bei Python wird die Regel Punkt vor Strich berücksichtigt und alle Klammern zuerst berechnet.\n"
    ]
   },
   {
