--- a/Python Allgemein/1_Einführung.ipynb
+++ b/Python Allgemein/1_Einführung.ipynb
@@ -54,9 +54,10 @@
     "tags": []
    },
    "source": [
-    "<font color='sky blue'>*__Aufgabe: Füge einen neuen Codeblock und einen neuen Textblock hinzu.__  <br><br>\n",
+    "<font color='sky blue'>*__Aufgabe: Füge einen neuen Codeblock hinzu.__  <br><br>\n",
     "Mit dem* `+` *oben links in der Zeile kannst du einen neuen Block hinzufügen.<br>\n",
-    "Diesen kannst du verschieben, etwas hineinschreiben oder ihn zum Beispiel auch wieder löschen. Wenn du oben rechts statt \"Code\" das Wort \"Markdown\" auswählst ist es ein Textblock und kein Code Block mehr. <br> <br>\n",
+    "Diesen kannst du verschieben, etwas hineinschreiben oder ihn zum Beispiel auch wieder löschen. \n",
+    "<br> <br>\n",
     "Mit dem Playbutton* `▶` *lässt du dir danach den Code ausführen oder den neuen Text anzeigen.<br> <br>\n",
     "Tipp: Du kannst dir immer Codeblöcke hinzufügen, wenn du mal etwas ausprobieren möchtest.*</font>"
    ]
